--- a/GunagtingBasicEngegy/news.html
+++ b/GunagtingBasicEngegy/news.html
@@ -29,7 +29,8 @@
   <link href="css/site.webflow.css?v=20240911" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js?v=20240911" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js?v=20240911"
+    type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({ google: { families: ["Poppins:regular,500"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -96,8 +97,37 @@
       <div class="w-dyn-list">
         <div role="list" class="blog-list w-dyn-items">
           <div role="listitem" class="w-dyn-item"><a aria-label="link" data-w-id="2628f1a9-b631-9988-640b-8fb13ba75a2d"
+              href="./pages/news/中秋節快樂.html" class="blog-item w-inline-block">
+              <div class="blog-image-wrap" style="max-height: 300px;"><img src="./images/website/最新消息/20240916_中秋.jpg"
+                  loading="eager"
+                  style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                  alt=""
+                  sizes="(max-width: 767px) 92vw, (max-width: 991px) 45vw, (max-width: 1279px) 30vw, (max-width: 1439px) 29vw, 32vw"
+                  srcset="./images/website/最新消息/20240916_中秋.jpg" class="blog-image">
+                <div class="blog-category-top">最新消息</div>
+              </div>
+              <div>
+                <h2 class="blog-title no-margin custom-style-black">🌕月圓人團圓，祝大家中秋佳節愉快🌕</h2>
+              </div>
+            </a></div>
+          <div role="listitem" class="w-dyn-item"><a aria-label="link" data-w-id="2628f1a9-b631-9988-640b-8fb13ba75a2d"
+              href="./pages/news/SIEMENS介紹.html" class="blog-item w-inline-block">
+              <div class="blog-image-wrap" style="max-height: 300px;"><img src="./images/website/最新消息/1_0.png"
+                  loading="eager"
+                  style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                  alt=""
+                  sizes="(max-width: 767px) 92vw, (max-width: 991px) 45vw, (max-width: 1279px) 30vw, (max-width: 1439px) 29vw, 32vw"
+                  srcset="./images/website/最新消息/1_0.png" class="blog-image">
+                <div class="blog-category-top">最新消息</div>
+              </div>
+              <div>
+                <h2 class="blog-title no-margin custom-style-black">⚡SIEMENS介紹⚡</h2>
+              </div>
+            </a></div>
+          <div role="listitem" class="w-dyn-item"><a aria-label="link" data-w-id="2628f1a9-b631-9988-640b-8fb13ba75a2d"
               href="./pages/晟梓案場.html" class="blog-item w-inline-block">
-              <div class="blog-image-wrap"><img src="./images/安裝實例圖片/安裝_晟梓_3.jpg" loading="eager"
+              <div class="blog-image-wrap" style="max-height: 300px;"><img src="./images/安裝實例圖片/安裝_晟梓_3.jpg"
+                  loading="eager"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                   alt=""
                   sizes="(max-width: 767px) 92vw, (max-width: 991px) 45vw, (max-width: 1279px) 30vw, (max-width: 1439px) 29vw, 32vw"
@@ -110,7 +140,8 @@
             </a></div>
           <div role="listitem" class="w-dyn-item"><a aria-label="link" data-w-id="2628f1a9-b631-9988-640b-8fb13ba75a2d"
               href="./pages/鳳仁案場.html" class="blog-item w-inline-block">
-              <div class="blog-image-wrap"><img src="./images/安裝實例圖片/安裝_鳳仁_3.jpg" loading="eager"
+              <div class="blog-image-wrap" style="max-height: 300px;"><img src="./images/安裝實例圖片/安裝_鳳仁_3.jpg"
+                  loading="eager"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                   alt=""
                   sizes="(max-width: 767px) 92vw, (max-width: 991px) 45vw, (max-width: 1279px) 30vw, (max-width: 1439px) 29vw, 32vw"
@@ -121,21 +152,6 @@
                 <h2 class="blog-title no-margin custom-style-black">20240821鳳仁案場安裝實例</h2>
               </div>
             </a></div>
-          <!-- <div role="navigation" aria-label="List" class="w-pagination-wrapper pagination">
-          <div id="w-node-_3ddf4a62-7ddd-79e5-ba63-3f89be21243e-b17e1d44" class="pagination-item"></div>
-          <div class="pagination-item">
-            <div aria-label="Page 1 of 2" role="heading" class="w-page-count page-count">1 / 2</div>
-          </div>
-          <div id="w-node-_54865294-833e-8dac-d365-c102dea1f21b-b17e1d44" class="pagination-item"><a
-              href="?18a52ecb_page=2" aria-label="Next Page" class="w-pagination-next button-primary-1">
-              <div class="w-inline-block">Next</div><svg class="w-pagination-next-icon" height="12px" width="12px"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12" transform="translate(0, 1)">
-                <path fill="none" stroke="currentColor" fill-rule="evenodd" d="M4 2l4 4-4 4"></path>
-              </svg>
-            </a>
-            <link rel="prerender" href="?18a52ecb_page=2">
-          </div>
-        </div> -->
         </div>
       </div>
   </section>
@@ -193,12 +209,6 @@
                 <a href="project.html" class="footer-simple-link">產品介紹</a>
                 <a href="news.html" class="footer-simple-link">最新消息</a>
                 <a href="contact.html" class="footer-simple-link">聯絡我們</a>
-                <!--                 
-                <a href="home-2.html" class="footer-simple-link">安裝實例</a>
-                <a href="about.html" class="footer-simple-link">服務項目</a>
-                <a href="project.html" class="footer-simple-link">安裝實例</a>
-                <a href="career.html" class="footer-simple-link">特色說明</a>
-                <a href="career.html" class="footer-simple-link">聯絡我們</a> -->
               </div>
             </div>
           </div>
