--- a/GunagtingBasicEngegy/pages/晟梓案場.html
+++ b/GunagtingBasicEngegy/pages/晟梓案場.html
@@ -66,19 +66,19 @@
 
   <div class="contact-sidebar">
     <a href="#" class="contact-icon">
-      <img src="images/LINE.svg" alt="Line">
+      <img src="../images/LINE.svg" alt="Line">
     </a>
     <a href="#" class="contact-icon">
-      <img src="images/facebook-dark.svg" alt="Facebook">
+      <img src="../images/facebook-dark.svg" alt="Facebook">
     </a>
     <a href="#" class="contact-icon">
-      <img src="images/instagram-dark.svg" alt="Instagram">
+      <img src="../images/instagram-dark.svg" alt="Instagram">
     </a>
     <a href="mailto:youremail@example.com" class="contact-icon">
-      <img src="images/mail.svg" alt="Email">
+      <img src="../images/mail.svg" alt="Email">
     </a>
     <a href="tel:+1234567890" class="contact-icon">
-      <img src="images/call.svg" alt="Phone">
+      <img src="../images/call.svg" alt="Phone">
     </a>
   </div>
 
@@ -193,19 +193,19 @@
           class="grid-footer-link">
           <div id="w-node-f186cf30-17a5-6ed6-37c8-6b48ecf59ae8-ecf59ae5">
             <a href="index.html" aria-current="page" class="footer-logo-wrap w-inline-block w--current"
-              style="max-width: 220px;"><img src="images/website/光庭基礎能源有限公司_LOGO_PNG-02.png" loading="eager"
+              style="max-width: 220px;"><img src="../images/website/光庭基礎能源有限公司_LOGO_PNG-02.png" loading="eager"
                 alt="Solaren logo"></a>
             <p class="footer-description">德國西門子充電樁授權經銷商</p>
             <div class="footer-contact-wrap">
-              <div class="footer-contact-address"><img src="images/location.svg" loading="eager" alt="Location icon"
+              <div class="footer-contact-address"><img src="../images/location.svg" loading="eager" alt="Location icon"
                   class="footer-contact-link-icon">
                 <div>高雄市鳳山區文龍東路99巷6號, Kaohsiung, Taiwan</div>
               </div>
-              <a href="#" class="footer-contact-link w-inline-block"><img src="images/call.svg" loading="eager"
+              <a href="#" class="footer-contact-link w-inline-block"><img src="../images/call.svg" loading="eager"
                   alt="Call icon" class="footer-contact-link-icon">
                 <div>07-7108877</div>
               </a>
-              <a href="guangting2024@gmail.com" class="footer-contact-link w-inline-block"><img src="images/mail.svg"
+              <a href="guangting2024@gmail.com" class="footer-contact-link w-inline-block"><img src="../images/mail.svg"
                   loading="eager" alt="Mail icon" class="footer-contact-link-icon">
                 <div>guangting2024@gmail.com</div>
               </a>
