--- a/GunagtingBasicEngegy/pages/西門子充電樁.html
+++ b/GunagtingBasicEngegy/pages/西門子充電樁.html
@@ -66,19 +66,19 @@
 
   <div class="contact-sidebar">
     <a href="#" class="contact-icon">
-      <img src="images/LINE.svg" alt="Line">
+      <img src="../images/LINE.svg" alt="Line">
     </a>
     <a href="#" class="contact-icon">
-      <img src="images/facebook-dark.svg" alt="Facebook">
+      <img src="../images/facebook-dark.svg" alt="Facebook">
     </a>
     <a href="#" class="contact-icon">
-      <img src="images/instagram-dark.svg" alt="Instagram">
+      <img src="../images/instagram-dark.svg" alt="Instagram">
     </a>
     <a href="mailto:youremail@example.com" class="contact-icon">
-      <img src="images/mail.svg" alt="Email">
+      <img src="../images/mail.svg" alt="Email">
     </a>
     <a href="tel:+1234567890" class="contact-icon">
-      <img src="images/call.svg" alt="Phone">
+      <img src="../images/call.svg" alt="Phone">
     </a>
   </div>
 
